# nihostt

./: .dockerignore  .gitignore  AGENTS.md  ANDROID.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.cuda  README.md  README_RU.md  build.rs  deny.toml
.cargo/: audit.toml  config.toml
.github/workflows/: benchmark.yml  ci.yml  homebrew.yml  release.yml  soak.yml
Formula/: nihostt.rb
docs/: api-versioning.md  asyncapi.yaml  cli.md  deployment.md  nihostt-demo.cast  openapi.yaml  runbook.md  verifying-releases.md
examples/: KotlinClient.kt  bun_client.ts  go_client.go  js_client.js  python_client.py
ffi/android/: NihosttBridge.kt
k8s/: deployment.yaml  service.yaml
src/: error.rs  ffi.rs  lib.rs  main.rs  onnx_proto.rs  quantize.rs
src/inference/: audio.rs  decode.rs  diarization.rs  features.rs  mod.rs  punctuation.rs  vad.rs
src/model/: mod.rs
src/protocol/: mod.rs
src/server/: http.rs  mod.rs  rate_limit.rs
tests/: benchmark.rs  e2e_errors.rs  e2e_rate_limit.rs  e2e_rest.rs  e2e_shutdown.rs  e2e_ws.rs  ffi_smoke.py  load_test.rs  soak_test.rs
tests/common/: mod.rs
tests/fixtures/: README.md
tests/fixtures/jsut/: meta.txt
tests/fixtures/tatoeba/: meta.txt
tests/fixtures/tatoeba_extended/: meta.txt
